2024-10-17T00:36:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11376137610 # 592
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-17
* notice: last 14d: unq all: 8 14
* notice: prev accum: outdated-unq outdated-all / unq all: 844 4638 / 851 4649
* notice: next accum: outdated-unq outdated-all / unq all: 844 4638 / 852 4652
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2024-10-16]

2024-10-15T12:13:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11345789813 # 589
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-15
* notice: last 14d: unq all: 7 11
* notice: prev accum: outdated-unq outdated-all / unq all: 842 4631 / 851 4649
* notice: next accum: outdated-unq outdated-all / unq all: 844 4638 / 851 4649
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-01] / []

2024-10-14T12:14:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11327302129 # 587
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-14
* notice: last 14d: unq all: 9 18
* notice: prev accum: outdated-unq outdated-all / unq all: 841 4623 / 851 4649
* notice: next accum: outdated-unq outdated-all / unq all: 842 4631 / 851 4649
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-30] / []

2024-10-14T00:38:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11319061714 # 586