@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-17T00:36:42Z",
+  "timestamp" : "2024-10-17T12:13:44Z",
   "count_outdated" : 4638,
   "uniques_outdated" : 844,
-  "count" : 4652,
-  "uniques" : 852,
+  "count" : 4654,
+  "uniques" : 854,
   "views" : [
     {
       "timestamp": "2024-10-04T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-17T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
