@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 8,
+  "count": 16,
+  "uniques": 10,
   "views": [
     {
       "timestamp": "2024-10-04T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2024-10-16T00:00:00Z",
       "count": 3,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-17T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
