@@ -1,3 +1,12 @@
+2024-10-17T12:13:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11384688165 # 593
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-17
+* notice: last 14d: unq all: 10 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 844 4638 / 852 4652
+* notice: next accum: outdated-unq outdated-all / unq all: 844 4638 / 854 4654
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-10-17]
+
 2024-10-17T00:36:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11376137610 # 592
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-17
